# VotV-RE

script/src/: AdvancedAnalysis.cpp  AdvancedAnalysis.h  CMakeLists.txt  CodeEmitter.cpp  CodeEmitter.h  DataFlowAnalysis.h  Decompiler.cpp  Decompiler.h  Main.cpp  Optimizations.cpp  Optimizations.h  PatternRecognition.cpp  PatternRecognition.h  Utils.cpp  Utils.h  offsetdumper.py
